--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="/JS/index.js">
+    <script src="/JS/index.js"></script>
 </head>
 <body>
 
-    <script>
-        var greet="Hello World";
-        document.write(greet);
-    </script>
-    
+    //<button onclick="alert('Hello Philippines and Hello World!')"> Click Me</button>
+
 </body>
 </html>
