--- a/HTML/compute.html
+++ b/HTML/compute.html
@@ -16,6 +16,9 @@
         <form action="/peso">
             <label for="">Magic Beans (Php 10 each):<input id="mb" type=""></label><br>
             <label for="">Strange metal thing (Php 30 each):<input  id="smt" type=""></label>
+            <button type="'button" oncontextmenu="alert('You have right clicked a button!')">on</button>
+            <a href="#" oncontextmenu="alert('You have right clicked a link!')">Click Me</a>
+            <textarea onkeydown="alert('You have pressed a key inside textarea!')"></textarea>
 
         </form>
     </div>
